docs: expand package comments and fix ta4j demo